# crayons-projects

./: Dockerfile  README.md  config.py  db.py  docker-compose.yml  entrypoint.sh  exceptions.py  main.py  pyproject.toml  sample.env  utils.py
models/: __init__.py  project.py
repository/: __init__.py  project.py
schemas/: __init__.py  data.py  project.py
services/: __init__.py  project.py
views/: __init__.py  dependencies.py  project.py
